--- a/blocks/content-header/content-header.css
+++ b/blocks/content-header/content-header.css
@@ -1,10 +1,11 @@
 
-.faq-header-wrapper {    
+main .section .content-header-wrapper {    
   background-color: #EEE;
   background-image: radial-gradient(480px 480px at 58% center, #fff 0%,#ebebeb 100%);
+  width:100%;
 }
 
-.faq-header {
+.content-header {
   width: 100%;
   margin: 0 auto; 
   padding-top: 25px;
@@ -14,8 +15,8 @@
   font-size: x-small;
 }
 
-.faq-header::after {
-  background: url("https://main--realmadrid--hlxsites.hlx.page/area-vip/images/rm-logo-headers.png") no-repeat left top;
+.content-header::after {
+  background: url("/area-vip/images/rm-logo-headers.png") no-repeat left top;
   width: 98px;
   height: 136px;
   background-size: 98px 136px;
@@ -26,7 +27,7 @@
   position: absolute;
 }
 
-.faq-header h1 {
+.content-header h1 {
   display: block;
   font-size: 2.4em;
   margin: 0 26px;
@@ -36,7 +37,7 @@
 
 }
 
-.faq-header .breadcrumb {
+.content-header .breadcrumb {
   display: none;
   margin-top: 9px;
   margin-left: 9px;
@@ -48,31 +49,31 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.faq-header .breadcrumb .breadcumb-items {
+.content-header .breadcrumb .breadcrumb-items {
   font-size: 1.2em;
 }
 
-.faq-header .breadcrumb .breadcumb-items a {
+.content-header .breadcrumb .breadcrumb-items a {
   text-decoration: none;
   padding-right: 1px;
   color: #999;
 }
 
-.faq-header .breadcrumb .breadcumb-items span {
+.content-header .breadcrumb .breadcrumb-items span {
   color: black;
 }
 
 @media (min-width:786px) and (max-width: 990px) {
-  .faq-header {
+  .content-header {
     padding-top: 39px;
     padding-bottom: 35px;
   }
 
-  .faq-header h1 {
+  .content-header h1 {
     font-size: 3em;
   }
 
-  .faq-header::after {
+  .content-header::after {
     width: 118px;
     height: 167px;
     right: 15px;
@@ -83,17 +84,17 @@
 
 @media (min-width: 990px) {
   /* show the breadcrumb */
-  .faq-header .breadcrumb {
+  .content-header .breadcrumb {
     display: block;
   }
 
-  .faq-header {
+  .content-header {
     width: 960px;
     min-height: 87px;
     padding: 35px 0 26px;
   }
 
-  .faq-header::after {
+  .content-header::after {
     width: 248px;
     height: 351px;
     display: block;
@@ -104,11 +105,8 @@
     background-size: auto;
   }
 
-  .faq-header h1 {
+  .content-header h1 {
     font-size: 5.3em;
     margin: 0 7px;
   }
-
-  
-
 }
