--- a/styles/styles.css
+++ b/styles/styles.css
@@ -287,7 +287,7 @@ body.vip-faq main .section {
 }
 
 /* header auto block to the top area */
-body.vip-faq main .section.faq-header-container {
+body.vip-faq main .section.content-header-container {
   grid-area: header;
   margin: 0;
 }
