--- a/blocks/contact-card/contact-card.css
+++ b/blocks/contact-card/contact-card.css
@@ -116,4 +116,54 @@
         background-color: var(--icon-primary-color);
         padding: 5px;
     }
+
+    /* the home page version */
+    .section.info-vip.homepage.contact-card-container>.contact-card-wrapper {
+        grid-column: 1/5;
+        grid-row: 4/5;
+        width: 100%;
+        max-height: none;
+        display: grid;
+        grid-template-columns: auto 800px 400px auto;
+    }
+
+    .section.info-vip.homepage.contact-card-container>.contact-card-wrapper .contact-card {
+      grid-column: 2/3;
+      padding: 28px 0 15px;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .section.info-vip.homepage.contact-card-container>.contact-card-wrapper .contact-card .title {
+      flex-basis: 50%;
+      max-width: 50%;
+      margin-bottom: 25px;
+      display: block;
+    }
+
+    .section.info-vip.homepage.contact-card-container>.contact-card-wrapper .contact-card .telephone {
+      display: flex;
+      flex-basis: 50%;
+      max-width: 50%;
+      flex-direction: row;
+      box-sizing: border-box;
+      margin-bottom: 45px;
+    }
+
+    .section.info-vip.homepage.contact-card-container>.contact-card-wrapper .contact-card .telephone::before {
+      content: "\e90a";
+      font-family: Real-Madrid-New-Icons, sans-serif;
+      color: #999;
+      font-size: 45px;
+      border: 0;
+      background: none;
+    }
+
+    .section.info-vip.homepage.contact-card-container>.contact-card-wrapper .contact-card .contact {
+      flex-basis: 100%;
+      max-width: 100%;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+    }
 }
