--- a/blocks/matches/matches.css
+++ b/blocks/matches/matches.css
@@ -263,6 +263,7 @@ main > .matches-container h2 {
   flex-direction: column;
 }
 
+ /* stylelint-disable-next-line no-descending-specificity */
 .calendar-info > a {
   flex-grow: 1;
   font-size: 0.938rem;
